# libGL_Renderer

./: CMakeLists.txt  README.md
cmake/: Findgl3w.cmake
include/glad/: glad.h
src/: glad.c  main.cpp
